version 0.4.0
- new ResponseHandler for compatibility with AssistantJS 0.4.0
- Support for the new Dialogflow webhook format with Dailogflow API v2
- Renamed "SpecHelper" to "GoogleSpecHelper"
- add extraction of SelectedGenericIntent with selectedElement in Entity `selectedElement`

version 0.3.1
- fixes bug in fits() method, making assistant-google denying all incomming requests

version 0.3.0
- makes assistant-google compatible with assistant-source 0.3.0
- adds extraction of used device: 'phone' for smart phone, 'speaker' for smart speaker
- removes deprecated interface names (e. g. rootInterfaces)
- switches to bunyan for logging, adds component-specific log outputs

version 0.2.2
- fixes displayText, now uses apiai displayText instead of voiceMessage

version 0.2.1
- fixes forceAuthenticated interface, makes it send a simple voice response

version 0.2.0
- introduces FORCED_GOOGLE_OAUTH_TOKEN
- adds support for cards
- adds support for suggestion chips
- adds support for reprompts
- adds support for chat bubbles / text messages
- changes to google api version 2
- adds google webhook interfaces
- introduces CHANGELOG and README

version 0.1.0
- initial public release