@@ -1,4 +1,5 @@
 version 0.4.0
+- aligns GoogleSpecHelper with new spec helper interface from AssistantJS 0.4.0
 - new ResponseHandler for compatibility with AssistantJS 0.4.0
 - Support for the new Dialogflow webhook format with Dailogflow API v2
 - Renamed "SpecHelper" to "GoogleSpecHelper"
